{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 78,
  "lineage": "f8eaf63d-bfa8-a660-7b98-aa9cb8460497",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0da73d47d7834afae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-26-30-154.compute-1.amazonaws.com",
            "public_ip": "100.26.30.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "upgrad_project_eip_555"
            },
            "tags_all": {
              "Name": "upgrad_project_eip_555"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:064349442911:instance/i-0ade5d9b97e2165d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ade5d9b97e2165d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "upgrad_project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0cf8961c0d85f07",
            "private_dns": "ip-10-0-3-119.ec2.internal",
            "private_ip": "10.0.3.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f83b30c2aeee3c1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079624c0027adf032",
            "tags": {
              "Name": "App_Server_555"
            },
            "tags_all": {
              "Name": "App_Server_555"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ffe57d62bcab59a"
            ]
          },
          "dependencies": [
            "aws_security_group.Private_Instances_SG_555",
            "aws_subnet.project_private_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:064349442911:instance/i-0a5381eb0001714a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5381eb0001714a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "upgrad_project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058f421178513fdf8",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_ip": "10.0.1.145",
            "public_ip": "100.24.24.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c46f352662566b8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097f7aeb042b68d18",
            "tags": {
              "Name": "Bastion_Host_555"
            },
            "tags_all": {
              "Name": "Bastion_Host_555"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05dd66c14bf52ccf2"
            ]
          },
          "dependencies": [
            "aws_security_group.Bastion_Host_SG_555",
            "aws_subnet.project_public_subnet1",
            "aws_vpc.project_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:064349442911:instance/i-01aa9e753362b10f9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01aa9e753362b10f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "upgrad_project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e214a01a23603908",
            "private_dns": "ip-10-0-3-110.ec2.internal",
            "private_ip": "10.0.3.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06303eb7effae0c60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079624c0027adf032",
            "tags": {
              "Name": "Jenkins_Server_555"
            },
            "tags_all": {
              "Name": "Jenkins_Server_555"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ffe57d62bcab59a"
            ]
          },
          "dependencies": [
            "aws_security_group.Private_Instances_SG_555",
            "aws_subnet.project_private_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:internet-gateway/igw-063149471aff32015",
            "id": "igw-063149471aff32015",
            "owner_id": "064349442911",
            "tags": {
              "Name": "upgrad_project_igw_555"
            },
            "tags_all": {
              "Name": "upgrad_project_igw_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da73d47d7834afae",
            "connectivity_type": "public",
            "id": "nat-0651a5dc9e52ece5b",
            "network_interface_id": "eni-0fe8a48d4abb8af99",
            "private_ip": "10.0.1.9",
            "public_ip": "100.26.30.154",
            "subnet_id": "subnet-097f7aeb042b68d18",
            "tags": {
              "Name": "upgrad_project_NAT_555"
            },
            "tags_all": {
              "Name": "upgrad_project_NAT_555"
            }
          },
          "dependencies": [
            "aws_eip.project_eip",
            "aws_internet_gateway.project_igw",
            "aws_subnet.project_public_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:route-table/rtb-0d9c0830daa70b18b",
            "id": "rtb-0d9c0830daa70b18b",
            "owner_id": "064349442911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0651a5dc9e52ece5b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upgrad_project_private_route_table_555"
            },
            "tags_all": {
              "Name": "upgrad_project_private_route_table_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.project_eip",
            "aws_internet_gateway.project_igw",
            "aws_nat_gateway.project_nat",
            "aws_subnet.project_public_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:route-table/rtb-064e4a9ba3cdf8aac",
            "id": "rtb-064e4a9ba3cdf8aac",
            "owner_id": "064349442911",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063149471aff32015",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upgrad_project_public_route_table_555"
            },
            "tags_all": {
              "Name": "upgrad_project_public_route_table_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_private_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c56ab179812fd8b",
            "route_table_id": "rtb-0d9c0830daa70b18b",
            "subnet_id": "subnet-079624c0027adf032"
          },
          "dependencies": [
            "aws_eip.project_eip",
            "aws_internet_gateway.project_igw",
            "aws_nat_gateway.project_nat",
            "aws_route_table.project_private_route_table",
            "aws_subnet.project_private_subnet1",
            "aws_subnet.project_public_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_private_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00143b5ae9009afbf",
            "route_table_id": "rtb-0d9c0830daa70b18b",
            "subnet_id": "subnet-092910f79b1e045db"
          },
          "dependencies": [
            "aws_eip.project_eip",
            "aws_internet_gateway.project_igw",
            "aws_nat_gateway.project_nat",
            "aws_route_table.project_private_route_table",
            "aws_subnet.project_private_subnet2",
            "aws_subnet.project_public_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_public_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062ea1592b2c51e8c",
            "route_table_id": "rtb-064e4a9ba3cdf8aac",
            "subnet_id": "subnet-097f7aeb042b68d18"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_public_route_table",
            "aws_subnet.project_public_subnet1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_public_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a4cc556c947818",
            "route_table_id": "rtb-064e4a9ba3cdf8aac",
            "subnet_id": "subnet-0c5cd8f5080b05094"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_public_route_table",
            "aws_subnet.project_public_subnet2",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion_Host_SG_555",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:security-group/sg-05dd66c14bf52ccf2",
            "description": " Allow self ip to ssh to Bastion instance and allow all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dd66c14bf52ccf2",
            "ingress": [
              {
                "cidr_blocks": [
                  "223.237.237.18/32"
                ],
                "description": "Allow self ip to ssh to Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion_Host_SG_555",
            "name_prefix": "",
            "owner_id": "064349442911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion_Host_SG_555"
            },
            "tags_all": {
              "Name": "Bastion_Host_SG_555"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Private_Instances_SG_555",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:security-group/sg-06ffe57d62bcab59a",
            "description": "Allow all incoming traffic from within VPC and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ffe57d62bcab59a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all incoming traffic from within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Private_Instances_SG_555",
            "name_prefix": "",
            "owner_id": "064349442911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private_Instances_SG_555"
            },
            "tags_all": {
              "Name": "Private_Instances_SG_555"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_Web_SG_555",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:security-group/sg-0d841429114e97d02",
            "description": "Allow incoming traffic to port 80 from self IP and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d841429114e97d02",
            "ingress": [
              {
                "cidr_blocks": [
                  "223.237.237.18/32"
                ],
                "description": "Allow incoming traffic to port 80 from self IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public_Web_SG_555",
            "name_prefix": "",
            "owner_id": "064349442911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_Web_SG_555"
            },
            "tags_all": {
              "Name": "Public_Web_SG_555"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:subnet/subnet-079624c0027adf032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-079624c0027adf032",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064349442911",
            "tags": {
              "Name": "upgrad_project_private_subnet1_555"
            },
            "tags_all": {
              "Name": "upgrad_project_private_subnet1_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:subnet/subnet-092910f79b1e045db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-092910f79b1e045db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064349442911",
            "tags": {
              "Name": "upgrad_project_private_subnet2_555"
            },
            "tags_all": {
              "Name": "upgrad_project_private_subnet2_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:subnet/subnet-097f7aeb042b68d18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-097f7aeb042b68d18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064349442911",
            "tags": {
              "Name": "upgrad_project_public_subnet1_555"
            },
            "tags_all": {
              "Name": "upgrad_project_public_subnet1_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:subnet/subnet-0c5cd8f5080b05094",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c5cd8f5080b05094",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "064349442911",
            "tags": {
              "Name": "upgrad_project_public_subnet2_555"
            },
            "tags_all": {
              "Name": "upgrad_project_public_subnet2_555"
            },
            "vpc_id": "vpc-0ab224b5474159fa2"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:064349442911:vpc/vpc-0ab224b5474159fa2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02407f64103ebf55e",
            "default_route_table_id": "rtb-021c8482da956e2b9",
            "default_security_group_id": "sg-078469d15a4fe2cb6",
            "dhcp_options_id": "dopt-2d714057",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ab224b5474159fa2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021c8482da956e2b9",
            "owner_id": "064349442911",
            "tags": {
              "Name": "upgrad_project_vpc_555"
            },
            "tags_all": {
              "Name": "upgrad_project_vpc_555"
            }
          }
        }
      ]
    }
  ]
}